--- a/src/components/editor/Lexical/Editor.scss
+++ b/src/components/editor/Lexical/Editor.scss
@@ -168,7 +168,7 @@
 
 		margin-bottom: 0.0625rem;
 		background-color: var(--color-bg);
-		padding: 0.25rem;
+		padding: 0.375rem 0.25rem;
 		border-top-left-radius: 0.75rem;
 		border-top-right-radius: 0.75rem;
 		vertical-align: middle;
